Fix some minor issues with topics cards on mobile.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -7784,7 +7784,6 @@ a[href*="http"] .article-header__date {
   padding: 0; }
 
 .topics-list {
-  display: none;
   margin-top: 0;
   clear: both;
   padding: 20px;
