--- a/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
@@ -1,5 +1,5 @@
 .topics-list {
-  display: none;
+  //display: none;
   margin-top: 0;
   clear: both;
   padding: 20px;
